--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,16 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+.focus\:ring-0:focus {
+  --tw-ring-offset-width: unset !important;
+  outline: 0;
+
+  border-color: hsl(var(--background));
+}
+
+.focus\:ring-0:focus-visible {
+  --tw-ring-offset-width: unset !important;
+  outline: 0;
+
+  border-color: hsl(var(--background));
+}
+
+.focus-visible\:ring-offset-2:focus-visible {
+  --tw-ring-offset-width: unset !important;
+  outline: 0;
+
+  border-color: hsl(var(--background));
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 20 14.3% 4.1%;
+    --foreground: 240, 4%, 9%;
 
     --card: 0 0% 100%;
-    --card-foreground: 20 14.3% 4.1%;
+    --card-foreground: 240, 4%, 9%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 20 14.3% 4.1%;
+    --popover-foreground: 240, 4%, 9%;
 
     --primary: 24.6 95% 53.1%;
     --primary-foreground: 60 9.1% 97.8%;
@@ -35,16 +56,16 @@
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: 240, 4%, 9%;
     --foreground: 60 9.1% 97.8%;
 
-    --card: 20 14.3% 4.1%;
+    --card: 240, 4%, 9%;
     --card-foreground: 60 9.1% 97.8%;
 
-    --popover: 20 14.3% 4.1%;
+    --popover: 240, 4%, 9%;
     --popover-foreground: 60 9.1% 97.8%;
 
-    --primary: 20.5 90.2% 48.2%;
+    --primary: 10 85% 55.7%;
     --primary-foreground: 60 9.1% 97.8%;
 
     --secondary: 12 6.5% 15.1%;
@@ -61,7 +82,7 @@
 
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
-    --ring: 20.5 90.2% 48.2%;
+    --ring: 10 85% 55.7%;
   }
 }
 
