--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,26 +1,46 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-.focus\:ring-0:focus {
-  --tw-ring-offset-width: unset !important;
-  outline: 0;
+@config '../../tailwind.config.js';
 
-  border-color: hsl(var(--background));
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
 }
 
-.focus\:ring-0:focus-visible {
-  --tw-ring-offset-width: unset !important;
-  outline: 0;
+@layer utilities {
+  .focus\:ring-0:focus {
+    --tw-ring-offset-width: unset !important;
+    outline: 0;
 
-  border-color: hsl(var(--background));
-}
+    border-color: hsl(var(--background));
+  }
 
-.focus-visible\:ring-offset-2:focus-visible {
-  --tw-ring-offset-width: unset !important;
-  outline: 0;
+  .focus\:ring-0:focus-visible {
+    --tw-ring-offset-width: unset !important;
+    outline: 0;
 
-  border-color: hsl(var(--background));
+    border-color: hsl(var(--background));
+  }
+
+  .focus-visible\:ring-offset-2:focus-visible {
+    --tw-ring-offset-width: unset !important;
+    outline: 0;
+
+    border-color: hsl(var(--background));
+  }
 }
 
 @layer base {
